--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -1664,7 +1664,7 @@
         SWT: Update SWT to v4.5 (affects printing not working); EX:/bin/your_os_name/swt/. See: <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_28" title="Dev/SWT">Dev/SWT</a>
       </li>
       <li>
-        XULRunner: Update XULRunner to version 31 (version 24 on Linux) (affects minor formatting issues on a small number of pages; wikis not downloading on some linux distros). See: <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_29" title="App/UI/HTML Browser">App/UI/HTML_Browser</a> <a href="https://en.wikisource.org/wiki/Lubbers_Don't_Live" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Lubbers_Don't_Live</a>!
+        XULRunner: Update XULRunner to version 31 (version 24 on Linux) (affects minor formatting issues on a small number of pages; wikis not downloading on some linux distros). See: <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_29" title="App/UI/HTML Browser" class="xowa-visited">App/UI/HTML_Browser</a> <a href="https://en.wikisource.org/wiki/Lubbers_Don't_Live" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Lubbers_Don't_Live</a>!
       </li>
     </ul>
     <p>
