--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -270,7 +270,7 @@
         v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_24" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
-        v2.6.5 uses SWT v4.5 and XULRunner v24. See <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_25" title="Dev/SWT">Dev/SWT</a> and <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_26" title="App/UI/HTML Browser">HTML Browser</a>
+        v2.6.5 uses SWT v4.5 and XULRunner v24. See <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_25" title="Dev/SWT">Dev/SWT</a> and <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_26" title="App/UI/HTML Browser" class="xowa-visited">HTML Browser</a>
       </li>
       <li>
         v2.6.3 uses WebKit for MacOSX. For more info, see <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_27" title="Blog">Blog</a><br>
