--- a/home/wiki/Options/Dev.html
+++ b/home/wiki/Options/Dev.html
@@ -216,7 +216,7 @@
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.setup.previous_version")' title="reset to &quot;&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.app.setup.previous_version" data-xocfg-key="xowa.app.setup.previous_version" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="4.5.7.1706">
+            <input id="xowa.app.setup.previous_version" data-xocfg-key="xowa.app.setup.previous_version" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="4.5.10.1707">
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.app.setup.previous_version__key_box' value='xowa.app.setup.previous_version'> <input type='hidden' id='xowa.app.setup.previous_version__ctx_box' value='app'>
         </div><!-- DIV:help -->
@@ -256,7 +256,7 @@
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.cfg.previous_grp")' title="reset to &quot;xowa.app.security&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.app.cfg.previous_grp" data-xocfg-key="xowa.app.cfg.previous_grp" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="xowa.wiki.hdumps">
+            <input id="xowa.app.cfg.previous_grp" data-xocfg-key="xowa.app.cfg.previous_grp" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="xowa.html.page">
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.app.cfg.previous_grp__key_box' value='xowa.app.cfg.previous_grp'> <input type='hidden' id='xowa.app.cfg.previous_grp__ctx_box' value='app'>
         </div><!-- DIV:help -->
@@ -342,9 +342,8 @@
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
 <textarea id="xowa.app.startup.tabs.previous_list" data-xocfg-key="xowa.app.startup.tabs.previous_list" data-xocfg-type="memo" accesskey="d" class="xocfg_data__memo xocfg_data__readonly" readonly="true">
-home/wiki/Special:XowaCfg
-home/wiki/Blog/2017-06
-home/wiki/Module:Diagnostics/TitleLibrary
+en.wikipedia.org/wiki/Earth
+home/wiki/Wiki_setup/English_wikis
 </textarea>
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.app.startup.tabs.previous_list__key_box' value='xowa.app.startup.tabs.previous_list'> <input type='hidden' id='xowa.app.startup.tabs.previous_list__ctx_box' value='app'>
@@ -365,7 +364,7 @@ home/wiki/Module:Diagnostics/TitleLibrary
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.startup.tabs.previous_selected")' title="reset to &quot;&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.app.startup.tabs.previous_selected" data-xocfg-key="xowa.app.startup.tabs.previous_selected" data-xocfg-type="int" accesskey="d" class="xocfg_data__int xocfg_data__readonly" type="text" readonly="true" value="2">
+            <input id="xowa.app.startup.tabs.previous_selected" data-xocfg-key="xowa.app.startup.tabs.previous_selected" data-xocfg-type="int" accesskey="d" class="xocfg_data__int xocfg_data__readonly" type="text" readonly="true" value="1">
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.app.startup.tabs.previous_selected__key_box' value='xowa.app.startup.tabs.previous_selected'> <input type='hidden' id='xowa.app.startup.tabs.previous_selected__ctx_box' value='app'>
         </div><!-- DIV:help -->
@@ -388,7 +387,7 @@ home/wiki/Module:Diagnostics/TitleLibrary
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.html.toggles.offline-wikis")' title="reset to &quot;y&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.html.toggles.offline-wikis" data-xocfg-key="xowa.html.toggles.offline-wikis" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool xocfg_data__readonly" type="checkbox" disabled="disabled" checked="checked">
+            <input id="xowa.html.toggles.offline-wikis" data-xocfg-key="xowa.html.toggles.offline-wikis" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool xocfg_data__readonly" type="checkbox" disabled="disabled">
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.html.toggles.offline-wikis__key_box' value='xowa.html.toggles.offline-wikis'> <input type='hidden' id='xowa.html.toggles.offline-wikis__ctx_box' value='app'>
         </div><!-- DIV:help -->
@@ -408,7 +407,7 @@ home/wiki/Module:Diagnostics/TitleLibrary
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.html.toggles.wikidata-langs")' title="reset to &quot;y&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.html.toggles.wikidata-langs" data-xocfg-key="xowa.html.toggles.wikidata-langs" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool xocfg_data__readonly" type="checkbox" disabled="disabled">
+            <input id="xowa.html.toggles.wikidata-langs" data-xocfg-key="xowa.html.toggles.wikidata-langs" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool xocfg_data__readonly" type="checkbox" disabled="disabled" checked="checked">
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.html.toggles.wikidata-langs__key_box' value='xowa.html.toggles.wikidata-langs'> <input type='hidden' id='xowa.html.toggles.wikidata-langs__ctx_box' value='app'>
         </div><!-- DIV:help -->
