--- a/home/wiki/Options/HTTP_server.html
+++ b/home/wiki/Options/HTTP_server.html
@@ -164,18 +164,18 @@
           <div id='xowa.addon.http_server.file_retrieve_mode__name' class='xocfg_itm_name'>
             File retrieve mode
           </div><!-- BTN:undo -->
-          <div id='xowa.addon.http_server.file_retrieve_mode__undo' data-xocfg-type='list:xowa.addon.http_server.file_retrieve_mode' class='xocfg_itm_delete xocfg_itm_hide'>
+          <div id='xowa.addon.http_server.file_retrieve_mode__undo' data-xocfg-type='list:xowa.addon.http_server.file_retrieve_mode' class='xocfg_itm_delete'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.addon.http_server.file_retrieve_mode")' title="reset to &quot;wait&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
             <select id="xowa.addon.http_server.file_retrieve_mode" data-xocfg-key="xowa.addon.http_server.file_retrieve_mode" data-xocfg-type="list:xowa.addon.http_server.file_retrieve_mode" accesskey="d" class="xocfg_data__list" size="3">
-              <option value="wait" selected="selected">
+              <option value="wait">
                 wait
               </option>
               <option value="skip">
                 skip
               </option>
-              <option value="async_server">
+              <option value="async_server" selected="selected">
                 async server
               </option>
             </select>
